refactor: refine income-tax-simulator

--- a/src/locale/messages.it.json
+++ b/src/locale/messages.it.json
@@ -4,6 +4,9 @@
     "4634629878080095710": "Scaglione",
     "8638895457925132911": "Importo finale tassazione",
     "8254787684713213524": "Percentuale tassazione su imponibile",
+    "2976243582885802773": "Simulatore tassa sul reddito",
+    "50430335307552307": "Reddito imponibile",
+    "3270947130442330781": "Inserisci l'importo imponibile su cui applicare la tassazione",
     "5949948569821234708": "Simulazione annuale",
     "6557852643167993840": "Simulazione tassa sul reddito individuale",
     "5428981063874203289": "Simulazione obbligazioni",
