chore: translate brackets detail component

--- a/src/locale/messages.it.json
+++ b/src/locale/messages.it.json
@@ -2,11 +2,15 @@
   "locale": "it-IT",
   "translations": {
     "4634629878080095710": "Scaglione",
+    "8510000464026462686": "Da",
+    "946660215597259551": "a",
     "8638895457925132911": "Importo finale tassazione",
     "8254787684713213524": "Percentuale tassazione su imponibile",
+    "548957846341456625": "Reddito post-tassazione",
     "2976243582885802773": "Simulatore tassa sul reddito",
     "50430335307552307": "Reddito imponibile",
     "3270947130442330781": "Inserisci l'importo imponibile su cui applicare la tassazione",
+    "5066236587391593965": "Dettaglio",
     "5949948569821234708": "Simulazione annuale",
     "6557852643167993840": "Simulazione tassa sul reddito individuale",
     "5428981063874203289": "Simulazione obbligazioni",
