--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -2,11 +2,15 @@
   "locale": "en-US",
   "translations": {
     "4634629878080095710": "brackets-detail.name",
+    "8510000464026462686": "brackets-detail.from",
+    "946660215597259551": "brackets-detail.to",
     "8638895457925132911": "brackets-detail.final-income-tax",
     "8254787684713213524": "brackets-detail.percentage-on-taxable-income",
+    "548957846341456625": "brackets-detail.income-after-taxation",
     "2976243582885802773": "income-tax-simulator.title",
     "50430335307552307": "income-tax-simulator.taxable-income-form-label",
     "3270947130442330781": "income-tax-simulator.taxable-income-form-hint",
+    "5066236587391593965": "income-tax-simulator.brackets-detail",
     "5949948569821234708": "side-bar.annual-income-simulation",
     "6557852643167993840": "side-bar.income-tax-simulation",
     "5428981063874203289": "side-bar.bond-simulation",
