feat: add footer to table

--- a/src/locale/messages.it.json
+++ b/src/locale/messages.it.json
@@ -14,6 +14,7 @@
     "5949948569821234708": "Simulazione annuale",
     "6557852643167993840": "Simulazione tassa sul reddito individuale",
     "5428981063874203289": "Simulazione obbligazioni",
-    "8927663329570040857": "Simulazione reddito mensile"
+    "8927663329570040857": "Simulazione reddito mensile",
+    "4358429487330216724": "Buste Paga"
   }
 }
